Added google analytics

--- a/index.html
+++ b/index.html
@@ -51,5 +51,13 @@
 </main>
 <script type="module" src="assets/js/bootstrap.bundle.js"></script>
 <script type="module" src="main.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G9M2TYHSC5"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G9M2TYHSC5');
+</script>
 </body>
 </html>
